gcc/testsuite/gdc.test/compilable/imports/defaa.d

module imports.defaa;

class Display
{

	private import imports.defab;

	B lastHittestB;

	this() { }
}
