gcc/testsuite/gdc.test/fail_compilation/imports/issue21685.d
module issue21685;

class E
{
    private this() {}
    public this(int) {}
}
